# OOP_REPO_2nd_sem

./: CMakeLists.txt  LICENSE  README.md
app/: main.cpp
include/my_math/: my_math.h
src/: my_math.cpp
